option java_package = "com.cloudata.auth";

message UserCredentialData {
	optional string login = 1;
	optional HashedPasswordData password_hashed = 2;
	optional bytes user_id = 3;
}

message UserData {
	optional bytes id = 1;
	optional string name = 2;
}

message HashedPasswordData {
	//optional algorithm  = 1;
	optional bytes salt = 2;
	optional int32 iterations = 3;
	optional bytes hashed = 4;
}

message AuthenticationTokenData {
	optional bytes id = 1;
	optional bytes user_id = 2;
	optional int64 expiration = 3;
}
